db based file management